--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Marcelo de Britto Gomes",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^0.8.8",
     "express": "^4.8.8"
   }
 }
